# tremolo-juce-course

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake
complete/: CMakeLists.txt  CMakePresets.json
complete/examples/: CMakeLists.txt
complete/examples/GuiThreadIdPrinting/: MainComponent.h
complete/examples/LongRunningTask/: MainComponent.h  MainComponent_solution.h
complete/test/: CMakeLists.txt
complete/test/source/: BypassTransitionSmootherTest.cpp  PluginProcessorTest.cpp  TestUtils.h  TremoloTest.cpp
complete/tremolo_plugin/: tremolo_plugin.h
complete/tremolo_plugin/source/: CustomLookAndFeel.cpp  JsonSerializer.cpp  LfoVisualizer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
examples/: CMakeLists.txt  CMakePresets.json
examples/Coordinates/: CMakeLists.txt  MainComponent.h
plugin/: CMakeLists.txt
plugin/include/Tremolo/: BypassButton.h  CustomLookAndFeel.h  Gradient.h  JSONSerializer.h  JsonSerializer.h  LfoVisualizer.h  Parameters.h  PluginEditor.h  (+3 more)
plugin/source/: CustomLookAndFeel.cpp  JSONSerializer.cpp  JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  JSONSerializerTest.cpp  JsonSerializerTest.cpp  PluginProcessorTest.cpp  TremoloTest.cpp
todo/: .gitignore  CMakeLists.txt  CMakePresets.json
todo/cmake/: CompilerWarnings.cmake
todo/test/: CMakeLists.txt
todo/tremolo_plugin/: tremolo_plugin.h
tremolo_plugin/source/: JsonSerializer.cpp  LfoVisualizer.cpp  PluginEditor.cpp
(+27 files in other folders)
